Onderdeel Jeugd toegevoegd

--- a/ELO/src/main/resources/templates/volwassenen_tegenstanders.html
+++ b/ELO/src/main/resources/templates/volwassenen_tegenstanders.html
@@ -5,7 +5,7 @@
     <title>Tegenstanders volwassenen</title>
 </head>
 <body>
-<h2>Wie waren jou tegenstanders?</h2>
+<h2>Wie waren je tegenstanders?</h2>
 <form action="/wedstrijdVolwassenen">
     <p>
         <label for="naam1">1e man: </label>
@@ -20,7 +20,7 @@
         <input type="text" id="naam3" name="naam3">
     </p>
     <p>
-        <label for="naam4">7e mans: </label>
+        <label for="naam4">4e man: </label>
         <input type="text" id="naam4" name="naam4">
     </p>
     <p>
