pagina tegenstanders jeugd gefixt

--- a/ELO/src/main/resources/templates/jeugd_tegenstanders.html
+++ b/ELO/src/main/resources/templates/jeugd_tegenstanders.html
@@ -5,6 +5,24 @@
     <title>Tegenstanders jeugd</title>
 </head>
 <body>
-<h1>COMING SOON</h1>
+<h2>Wie waren je tegenstanders?</h2>
+<form action="/wedstrijdJeugd">
+    <p>
+        <label for="naam1">1e man: </label>
+        <input type="text" id="naam1" name="naam1">
+    </p>
+    <p>
+        <label for="naam2">2e man: </label>
+        <input type="text" id="naam2" name="naam2">
+    </p>
+    <p>
+        <label for="naam3">3e man: </label>
+        <input type="text" id="naam3" name="naam3">
+    </p>
+    <p>
+        <input type="submit" value="Doorgaan">
+    </p>
+</form>
 </body>
 </html>
+
